# RoohaniyeNooreIlm-Linux-Repo-Official

./: .gitignore  README.md  apps.json.example  build.md  continue.md  manifest.json
live-build/: build.sh
live-build/config-src/: 0100-setup-roohaniye.hook.chroot  commands.txt  debug-console.sh  (+9 more)
shell-src/: CMakeLists.txt  appcenter.cpp  appcenter.h  audiobackend.cpp  audiobackend.h  authbackend.cpp  authbackend.h  brightnessbackend.cpp  brightnessbackend.h  dbconnectorbackend.cpp  dbconnectorbackend.h  debugbackend.cpp  debugbackend.h  installerbackend.cpp  installerbackend.h  main.cpp  mushafbackend.cpp  mushafbackend.h  powerbackend.cpp  powerbackend.h  prayerbackend.cpp  prayerbackend.h  qml.qrc  quranbackend.cpp  quranbackend.h  reminderbackend.cpp  reminderbackend.h  storagebackend.cpp  storagebackend.h  systeminfobackend.cpp  systeminfobackend.h  themebackend.cpp  themebackend.h  updatebackend.cpp  updatebackend.h  volumebackend.cpp  volumebackend.h  wifibackend.cpp  wifibackend.h
shell-src/qml/: AboutQuran.qml  AppCenter.qml  DatabaseConnector.qml  DebugConsoleView.qml  HadithMenu.qml  HadithTopicPicker.qml  HadithView.qml  HomeScreen.qml  InstallerWizard.qml  JuzPicker.qml  LocationPicker.qml  LockScreen.qml  Main.qml  MushafGallery.qml  MushafReader.qml  PrayerTimesView.qml  QiblaView.qml  QuickSettingsPanel.qml  QuranMenu.qml  QuranView.qml  ReciterPicker.qml  RemindersView.qml  SettingsView.qml  SplashScreen.qml  SurahPicker.qml  SystemInfoView.qml  TopBar.qml  UpdatesView.qml  VirtualKeyboard.qml
shell-src/scripts/: split_quran_db.py
